--- a/client/src/assets/styles/Header.css
+++ b/client/src/assets/styles/Header.css
@@ -4,7 +4,7 @@
   height:   4rem;
   overflow: hidden;
 
-  border-bottom: 1px solid var(--B500);
+  border-bottom: 1px solid var(--N900);
 
   color: var(--B500);
 }
@@ -41,8 +41,10 @@
 
 #header-title {
   text-transform: uppercase;
-  font-size: 1.2rem;
+  font-size:      1.2rem;
   letter-spacing: 0.2rem;
+
+  cursor: pointer;
 }
 
 button {
@@ -69,7 +71,7 @@ button {
   color: var(--B500);
 }
 
-button:hover {
+#header-actions-container button:hover {
   background-color: var(--O100);
   transform: translateY(-10px);
 }
