--- a/client/src/assets/styles/AddProduct.css
+++ b/client/src/assets/styles/AddProduct.css
@@ -74,6 +74,32 @@
   margin-bottom: 1rem;
 }
 
+.required-notif {
+  position:absolute;
+  display: inline-block;
+
+  height: 1rem;
+
+  left:   0;
+  bottom: 0;
+
+  text-transform: uppercase;
+
+  color: var(--R300);
+  background-color: white;
+
+  animation: 1s 1 forwards moveup;
+}
+
+@keyframes moveup {
+  from {
+    translate: 0 0;
+  }
+  to {
+    translate: 0 -2.5rem;
+  }
+}
+
 #addproduct-btn-submit {
   width:  100%;
   height: 2.5rem;
