--- a/client/src/assets/styles/ProductCard.css
+++ b/client/src/assets/styles/ProductCard.css
@@ -16,3 +16,56 @@
   font-weight: 700;
   color: var(--G300);
 }
+
+#productcard-actions-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1rem;
+  height: 100%;
+
+  padding: 1rem;
+
+  display: flex;
+  flex-direction:  column;
+  justify-content: space-evenly;
+  align-items:     center;
+
+  transform:  translateX(3rem);
+  transition: transform 200ms ease-in-out;
+
+  background-color: rgba(30, 31, 32, 0.116);
+}
+
+.productcard-actions-icon {
+  width:  1rem;
+  height: 1rem;
+  cursor: pointer;
+}
+
+#productcard-container:hover #productcard-actions-container {
+  transform: translateX(0);
+}
+
+.spin-grow {
+  transition: transform .7s ease-in-out;
+}
+
+.spin-grow:hover {
+  transform: rotate(360deg) scale(1.2);
+}
+
+.shake:hover {
+  animation-duration: .7s;
+  animation-iteration-count: 1;
+  animation-name: shake;
+  animation-timing-function: ease;
+}
+
+@keyframes shake {
+    0% { transform: rotate(0deg); }
+   25% { transform: rotate(0deg); }
+   50% { transform: rotate(20deg); }
+   75% { transform: rotate(-20deg); }
+  100% { transform: rotate(0deg); }
+}
