Moved colors to theme.css

--- a/client/src/assets/styles/Form.css
+++ b/client/src/assets/styles/Form.css
@@ -5,7 +5,7 @@
   padding:    0 2rem;
   border-radius: 8px;
 
-  background-color: #FFF;
+  /* background-color: #FFF; */
 }
 
 #form-heading {
@@ -16,14 +16,14 @@
   justify-content: center;
 
   margin-bottom: 1rem;
-  border-bottom: 2px solid var(--N900);
+  /* border-bottom: 2px solid var(--N900); */
 
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size:   1.2rem;
   font-weight: 600;
 
-  color: var(--O100);
+  /* color: var(--O100); */
 }
 
 .form-input-container {
@@ -41,10 +41,10 @@
   padding:    0 0.8rem;
   padding-left: 2.8rem;
 
-  border: 1px solid var(--N900);
+  /* border: 1px solid var(--N900); */
   border-radius: 4px;
 
-  color: #666;
+  /* color: #666; */
 
   will-change: background-color;
   transition: all 200ms ease-out;
@@ -52,8 +52,8 @@
 
 .form-input:focus {
   outline: none;
-  box-shadow: 0 0 0 1pt var(--B500);
-  background-color: var(--N900);
+  /* box-shadow: 0 0 0 1pt var(--B500);
+  background-color: var(--N900); */
 }
 
 .form-icon {
@@ -77,8 +77,8 @@
 
   text-transform: uppercase;
 
-  color: var(--R300);
-  background-color: white;
+  /* color: var(--R300);
+  background-color: white; */
 
   animation: 1s 1 forwards moveup;
 }
