--- a/client/src/assets/styles/ProductCard.css
+++ b/client/src/assets/styles/ProductCard.css
@@ -3,7 +3,7 @@
   overflow: hidden;
 
   padding: 1rem;
-  border:  1px solid var(--B500);
+  /* border:  1px solid var(--B500); */
   border-radius: 4px;
 
   text-overflow: ellipsis;
@@ -14,7 +14,7 @@
   margin-bottom: 0.5rem;
 
   font-weight: 700;
-  color: var(--G300);
+  /* color: var(--G300); */
 }
 
 #productcard-actions-container {
