--- a/client/src/assets/styles/AddProduct.css
+++ b/client/src/assets/styles/AddProduct.css
@@ -13,7 +13,7 @@
   padding:    0 2rem;
   border-radius: 8px;
 
-  background-color: #FFF;
+  /* background-color: #FFF; */
 }
 
 #addproduct-heading {
